--- a/index.html
+++ b/index.html
@@ -21,13 +21,14 @@
     
 <div class="container-fluid maindiv">
     <div id="main">STOPWATCH</div>
-<div>
+<div id="divbtn">
 <button class="butn"> Start</button>
 <button class="butn">Pause</button>
 <button class="butn"> Stop</button>
+<button class="butn">Laps</button>
 </div>
 <div id="caltime">00:00:00:00</div>
-
+<div id="laps"></div>
 
 </div>
 
